--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg p-0 bg-body-tertiary bg-dark">
         <div class="container-fluid bg-dark p-3">
-            <a class="navbar-brand text-white" href="#">Carousal</a>
+            <a class="navbar-brand text-white" href="#home">Carousal</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -22,14 +22,17 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active text-light" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Link</a>
+                        <a class="nav-link text-light" href="#">Link</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link disabled text-white" aria-disabled="true">Disabled</a>
+                        <a class="nav-link text-secondary" href="#" style="cursor: not-allowed;"
+                            aria-disabled="true">
+                            Disabled
+                        </a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -43,7 +46,7 @@
     </nav>
     <!-- Card Content -->
     <div>
-        <div class="carousel w-100">
+        <div id="home" class="carousel w-100">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -118,7 +121,8 @@
                             data-bs-target="#viewModal">View</button>
                         <button class="btn btn-outline-dark">Edit</button>
                     </div>
-                    <button class="bg-dark rounded-pill text-white  px-3 py-0">9 Min</button>
+                    <span class="badge bg-dark rounded-pill px-3 my-auto ms-auto text-white">9 Min</span>
+
                 </div>
             </div>
         </div>
@@ -136,7 +140,8 @@
                             data-bs-target="#viewModal">View</button>
                         <button class="btn btn-outline-dark">Edit</button>
                     </div>
-                    <button class="bg-dark rounded-pill text-white  px-3 py-0">9 Min</button>
+                    <span class="badge bg-dark rounded-pill px-3 my-auto ms-auto text-white">9 Min</span>
+
                 </div>
             </div>
         </div>
@@ -154,7 +159,8 @@
                             data-bs-target="#viewModal">View</button>
                         <button class="btn btn-outline-dark">Edit</button>
                     </div>
-                    <button class="bg-dark rounded-pill text-white  px-3 py-0">9 Min</button>
+                    <span class="badge bg-dark rounded-pill px-3 my-auto ms-auto text-white">9 Min</span>
+
                 </div>
             </div>
         </div>
@@ -172,7 +178,84 @@
                             data-bs-target="#viewModal">View</button>
                         <button class="btn btn-outline-dark">Edit</button>
                     </div>
-                    <button class="bg-dark rounded-pill text-white  px-3 py-0">9 Min</button>
+                    <span class="badge bg-dark rounded-pill px-3 my-auto ms-auto text-white">9 Min</span>
+
+                </div>
+            </div>
+        </div>
+        <div class="card rounded" style="width: 18rem;">
+            <div class="  w-100 bg-secondary text-white d-flex align-items-center justify-content-center"
+                style="height: 200px;">
+                <h2>Thumbnail</h2>
+            </div>
+            <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card’s content.</p>
+                <div class="d-flex justify-content-between">
+                    <div class="btn-group" role="group">
+                        <button type="button" class="btn btn-outline-dark" data-bs-toggle="modal"
+                            data-bs-target="#viewModal">View</button>
+                        <button class="btn btn-outline-dark">Edit</button>
+                    </div>
+                    <span class="badge bg-dark rounded-pill px-3 my-auto ms-auto text-white">9 Min</span>
+
+                </div>
+            </div>
+        </div>
+        <div class="card rounded" style="width: 18rem;">
+            <div class="  w-100 bg-secondary text-white d-flex align-items-center justify-content-center"
+                style="height: 200px;">
+                <h2>Thumbnail</h2>
+            </div>
+            <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card’s content.</p>
+                <div class="d-flex justify-content-between">
+                    <div class="btn-group" role="group">
+                        <button type="button" class="btn btn-outline-dark" data-bs-toggle="modal"
+                            data-bs-target="#viewModal">View</button>
+                        <button class="btn btn-outline-dark">Edit</button>
+                    </div>
+                    <span class="badge bg-dark rounded-pill px-3 my-auto ms-auto text-white">9 Min</span>
+
+                </div>
+            </div>
+        </div>
+        <div class="card rounded" style="width: 18rem;">
+            <div class="  w-100 bg-secondary text-white d-flex align-items-center justify-content-center"
+                style="height: 200px;">
+                <h2>Thumbnail</h2>
+            </div>
+            <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card’s content.</p>
+                <div class="d-flex justify-content-between">
+                    <div class="btn-group" role="group">
+                        <button type="button" class="btn btn-outline-dark" data-bs-toggle="modal"
+                            data-bs-target="#viewModal">View</button>
+                        <button class="btn btn-outline-dark">Edit</button>
+                    </div>
+                    <span class="badge bg-dark rounded-pill px-3 my-auto ms-auto text-white">9 Min</span>
+
+                </div>
+            </div>
+        </div>
+        <div class="card rounded" style="width: 18rem;">
+            <div class="  w-100 bg-secondary text-white d-flex align-items-center justify-content-center"
+                style="height: 200px;">
+                <h2>Thumbnail</h2>
+            </div>
+            <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card’s content.</p>
+                <div class="d-flex justify-content-between">
+                    <div class="btn-group" role="group">
+                        <button type="button" class="btn btn-outline-dark" data-bs-toggle="modal"
+                            data-bs-target="#viewModal">View</button>
+                        <button class="btn btn-outline-dark">Edit</button>
+                    </div>
+                    <span class="badge bg-dark rounded-pill px-3 my-auto ms-auto text-white">9 Min</span>
+
                 </div>
             </div>
         </div>
@@ -242,7 +325,7 @@
     </div>
     <!-- Modal Content -->
     <div class="modal" id="viewModal" tabindex="-1">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">View Page</h5>
@@ -260,17 +343,18 @@
     </div>
     <!-- Footer -->
     <div class="mx-5">
+  <div class="mx-5">
+    <footer class="footer mx-5 mt-2 d-flex justify-content-between">
+      <p>   
+        &copy; 2025 Dinesh Babu N G, Inc.
+        <a href="#" class="text-primary text-decoration-none ms-2">Privacy</a>.
+        <a href="#" class="text-primary text-decoration-none">Terms</a>
+      </p>
+      <a href="#" class="text-primary text-decoration-none" style="cursor: pointer;">Back to top</a>
+    </footer>
+  </div>
+</div>
 
-        <div class="mx-5">
-
-            <footer class="footer mx-5 mt-2 d-flex justify-content-between">
-                <p>&copy; 2025 Your Company Name, inc .<span class="text-primary">Privacy</span>.<span
-                        class="text-primary">Terms</span></p>
-                <p class="text-primary">Back to top</p>
-
-            </footer>
-        </div>
-    </div>
 
 
     </div>
